Correção do operador relacional no Ex10

--- a/Sprint 02/L6_Ex10.html
+++ b/Sprint 02/L6_Ex10.html
@@ -27,7 +27,7 @@
             divMsg.innerHTML = `Maior de idade e liso`
         } else if (idade >= 18 && salario >= 3500 && salario <= 7000 ){
             divMsg.innerHTML = `Maior de idade e ostentação`
-        } else if (idade >= 18 && salario >= 7000){
+        } else if (idade >= 18 && salario > 7000){
             divMsg.innerHTML = `Maior de idade e mega ostentação`
         }
     }
