--- a/Sprint 02/L8_Ex04.html
+++ b/Sprint 02/L8_Ex04.html
@@ -10,14 +10,14 @@
     Login:
     <input type="text" id="input_login"><br><br>
     Senha:
-    <input type="text" id="input_senha"><br><br>
+    <input type="password" id="input_senha"><br><br>
     Escolha a pergunta pessoal:
     <select id="#">
         <option value="#">Ano de Nascimento</option>
         <option value="#">Nome do animal de estimação</option>
     </select><br>
     Sua resposta:
-    <input type="text" id="input_pessoal"><br><br>
+    <input type="password" id="input_pessoal"><br><br>
     <button onclick="verificar()">Autenticar</button>
     <div id="divMsg"></div>
 </body>
