--- a/Sprint 02/L8_Ex05.html
+++ b/Sprint 02/L8_Ex05.html
@@ -21,7 +21,7 @@
         var umidade = Number(input_umidade.value)
         
         if(umidade < 0 || umidade > 100){
-            alert('Valor de umidade inválido')
+            alert(`${divMsg.innerHTML = ``} Valor de umidade inválido`)
         } else if (((temp >= 22 && temp <= 23) || (temp>= 22 && temp <= 23)) && umidade < 60){
             divMsg.innerHTML = `Clima agradável`
         } else {
