--- a/Sprint 02/L9_Ex03.html
+++ b/Sprint 02/L9_Ex03.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 01</title>
+    <title>Exercício 03</title>
 </head>
 <body>
-    <button onclick="contar()">Contar</button>
+    <button onclick="texto()">Diga algo sobre a matéria de Algoritmos</button>
     <div id="divMsg"></div>
 </body>
 </html>
 <script>
-    function contar(){
+    function texto(){
         divMsg.innerHTML = ``
     
-        for(var contador = 1; contador <= 15; contador ++ ){
-            divMsg.innerHTML += `${contador}<br>`
+        for(var contador = 1; contador <= 7; contador ++ ){
+            divMsg.innerHTML += `${contador}. Só é a melhor materia<br>`
         }
     }
 </script>
