--- a/Sprint 02/L9_Ex07.html
+++ b/Sprint 02/L9_Ex07.html
@@ -7,19 +7,23 @@
 </head>
 <body>
     Informe um número de 20 a 100
-    <input type="number" id="input_numero" min="20" max="100"><br>
+    <input type="number" id="input_limite"><br>
     <button onclick="result()">Adoro múltiplos de 5</button>
     <div id="divMsg"></div>
 </body>
 </html>
 
 <script>
-    var contador = 0;
     function result(){
-        var numero = Number(input_numero.value)
-        for( ; contador <= numero ; contador += 5){
-            divMsg.innerHTML += `${contador}<br>`
+        var limite = Number(input_limite.value)
+        if(limite >= 20 && limite <= 100){
+            for(var contador = 0; contador <= limite ; contador ++){
+                var resto = contador % 5
+                if(resto == 0){
+                    divMsg.innerHTML += `${contador}<br>`
+                }
+            }
         }
-        
+
     }
 </script>
