Continuação da Lista 9

--- a/Sprint 02/L9_Ex09.html
+++ b/Sprint 02/L9_Ex09.html
@@ -20,10 +20,14 @@
 <script>
     function papagaio(){
         var numero = Number(input_numero.value);
-        var texto = input_texto.value
+        var frase = input_texto.value
+        var texto = ""
 
         for(var cont = 1; cont <= numero; cont++){
-            alert(texto)
+            texto += frase
+        }
+        for(var cont = 1; cont <= numero; cont++){
+            alert(`${texto}`)
         }
     }
 </script>
