Continuação da Avaliativa 2

--- a/Sprint 02/Avaliativas/Att_Avaliativa2.html
+++ b/Sprint 02/Avaliativas/Att_Avaliativa2.html
@@ -12,25 +12,25 @@
     <input type="number" id="input_ep">
     <br>
     Quantidade de tempo disponível:
-    <input type="number" id="input_tempo">
+    <input type="number" id="input_tempoDisponivel">
     <br>
     Unidade de tempo em:
-    <select id="select_tempo">
-        <option value="">Selecione uma opção</option>
+    <select id="select_unidade">
+        <option value="#">Selecione uma opção</option>
         <option value="horas">Horas</option>
         <option value="minutos">Minutos</option>
     </select>
     <br>
     Pular abertura?
     <select id="select_abertura">
-        <option value="">Selecione uma opção</option>
+        <option value="#">Selecione uma opção</option>
         <option value="sim">sim</option>
         <option value="nao">não</option>
     </select>
     <br>
     Pular encerramento?
     <select id="select_encerramento">
-        <option value="">Selecione uma opção</option>
+        <option value="#">Selecione uma opção</option>
         <option value="sim">sim</option>
         <option value="nao">não</option>
     </select>
@@ -44,15 +44,15 @@
 <script>
     function assistir() {
         var ep = Number(input_ep.value);
-        var tempo = Number(input_tempo.value);
-        var tipoTempo = (select_tempo.value);
+        var tempoDisponivel = Number(input_tempoDisponivel.value);
+        var unidade = (select_unidade.value);
         var abertura = (select_abertura.value);
         var encerramento = (select_encerramento.value);
-        var tempoEp;
-        var assistirEp;
+        var tempoEp = 0;
+        var mensagem = "";
 
-        if (tipoTempo == 'horas') {
-            tempo = tempo * 60
+        if (unidade == 'horas') {
+            tempoDisponivel *= 60
         }
 
         if (abertura == 'nao' && encerramento == 'nao') {
@@ -65,8 +65,26 @@
             tempoEp = 20;
         }
 
+        var epAssistidos = tempoDisponivel / tempoEp;
+
         if (ep >= 1 && ep <= 1100) {
-            
+            for (var contadorEp = ep; tempoDisponivel > 0 && contadorEp <= 1100; contadorEp++){
+                mensagem += `Episódio: ${contadorEp}<br>`;
+                for (var contadorMin = 1; contadorMin <= tempoEp && tempoDisponivel > 0; contadorMin++){
+                    if (abertura == 'nao' && contadorMin <= 2){
+                        mensagem += `Minuto ${contadorMin}: Assistindo Abertura<br>`;
+                    } else if (encerramento == 'nao' && contadorMin > (tempoEp - 2)){
+                        mensagem += `Minuto ${contadorMin}: Assistindo Encerramento<br>`;
+                    } else {
+                        mensagem += `Minuto ${contadorMin}: Assistindo Episódio<br>`;
+                    }
+                    tempoDisponivel--;
+                }
+                mensagem += "<br>"
+            }
+            mensagem += `Fim dos episódios!<br>Foram assistidos: ${epAssistidos} episódios`
+            div_mensagem.innerHTML = mensagem;
+
         } else {
             alert("O número do episódio é inválido");
         }
